# fandom-data

./: Cargo.toml  IDEAS.md  NOTES.md  README.md  docker-compose.yml
src/: lib.rs  request.rs  scrape.rs  search.html  search.json  search.rs
