[package]
name = "ao3-fandom-vis"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
once_cell = "1.5.2"
scraper = "0.12.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"

[dev-dependencies]
pretty_assertions = "0.6.1"
