[package]
name = "fandom-data"
version = "0.1.0"
authors = ["Tom Milligan <code@tommilligan.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
chord = "0.2.1"
chrono = { version = "0.4.19", features = ["serde"] }
elasticsearch = "7.10.0-alpha.1"
env_logger = "0.8.2"
itertools = "0.9.0"
log = "0.4.11"
once_cell = "1.5.2"
palette = "0.5.0"
plotters = "0.3.0"
rayon = "1.5.0"
reqwest = { version = "0.10.9", features = ["blocking"] }
scraper = "0.12.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
structopt = "0.3.21"
tokio = { version = "*", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
